--- a/src/app/cuentas-contables/cuentas-contables.component.html
+++ b/src/app/cuentas-contables/cuentas-contables.component.html
@@ -1,3 +1,32 @@
-<p>
-  cuentas-contables works!
-</p>
+<app-menu></app-menu>
+<div class="container-fluid main">
+  <div class="form-row">
+    <h4 class="mt-3">Cuentas contables</h4>
+  </div>
+  <br />
+  <table class="table table-hover">
+    <thead>
+      <tr>
+        <th scope="col">...</th>
+        <th scope="col">Opciones</th>
+        <th scope="col">Codigo</th>
+        <th scope="col">Nombre</th>
+        <th scope="col">Tipo</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let item of itemsFactura">
+    
+        <td>
+        
+        </td>
+        <td> </td>
+        <td>
+        
+        </td>
+        <td></td>
+        <td></td>
+      </tr>
+    </tbody>
+  </table>
+</div>
